--- a/template/style/style.css
+++ b/template/style/style.css
@@ -17,3 +17,26 @@
 .logger p {
   font-family: "Gill Sans", sans-serif;
 }
+
+#title
+{
+  background : linear-gradient(rgba(148, 146, 146, 0.815), rgb(250, 250, 250));  
+  color: rgb(35, 95, 40);
+  font-size: 3rem;
+  border-style: ridge;
+  text-align: center;
+  margin : 2% 40%;
+  padding : 1% 0;
+  border-color: brown;
+  border-width: 1rem;
+}
+
+@media screen and (max-width: 800px) 
+{
+  #title
+  {
+    font-size: 2em;
+    margin: 3% 25%;
+    border-width: 0.7rem;
+  }
+}
