--- a/template/style/style.css
+++ b/template/style/style.css
@@ -1,4 +1,9 @@
 /* CSS Style */
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
 .logger {
   background-color: #1e88e5;
   border: 2px solid #1976d2;
@@ -20,7 +25,7 @@
 
 #title
 {
-  background : linear-gradient(rgba(148, 146, 146, 0.815), rgb(250, 250, 250));  
+  background : linear-gradient(rgba(148, 146, 146, 0.815), rgb(250, 250, 250));
   color: rgb(17, 20, 195);
   font-size: 2.8rem;
   border-style: ridge;
@@ -31,7 +36,7 @@
   border-width: 1rem;
 }
 
-@media screen and (max-width: 1000px) 
+@media screen and (max-width: 1000px)
 {
   #title
   {
