--- a/template/style/style.css
+++ b/template/style/style.css
@@ -30,6 +30,7 @@ html, body
   font-family: "Gill Sans", sans-serif;
 }
 
+
 .section
 {
   overflow: hidden;
@@ -41,34 +42,52 @@ html, body
 
 .p_section
 {
-  font-size: 4em;
+  font-size: 400%;
   color: antiquewhite;
-  margin-top: 40%;
+  margin-top: 200px;
+  height: auto;
+  transition: all 0.7s;
+}
+.p_section:hover
+{
+  transform: scale(0.9);
 }
 
 #wasted
 {
-  margin-left: 35%;
-  margin-top: 80%;
+  border-style: groove;
+  margin-left: 25%;
+  margin-top:400px;
   padding: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
   display: block;
   text-align: center;
   background-color: #E7AB5B;
-  position: absolute;
+  position: fixed;
   z-index: 20;
 }
 
 #C_P
 {
   background-color: #655BE7;
+  transition: all 0.5s;
+  padding:0;
+}
+#C_P .p_section:hover
+{
+  background-color: rgb(38, 33, 112);
 }
 #J_P
 {
   background-color: #E7655B;
 }
 
-
-@media screen and (max-width: 1000px)
+@media screen and (min-width: 701px)
 {
-
+  #wasted
+  {
+    background-color: rgb(148, 148, 148);
+  }
 }
+
