--- a/template/style/style.css
+++ b/template/style/style.css
@@ -70,7 +70,7 @@ html, body
 {
   color: rgb(255, 255, 255);
   font-family: 'Bungee Shade', cursive;
-  border-style: groove;
+  border-radius: 10px;
   padding: 10px;
   padding-left: 10%;
   padding-right: 10%;
