--- a/template/style/style.css
+++ b/template/style/style.css
@@ -70,7 +70,7 @@ html, body
 {
   color: rgb(255, 255, 255);
   font-family: 'Bungee Shade', cursive;
-  border-radius: 10px;
+  border-radius: 10px ;
   padding: 10px;
   padding-left: 10%;
   padding-right: 10%;
@@ -116,7 +116,7 @@ html, body
 }
 #pseudo
 {
-  top: 10%;
+  top: 25%;
   font-family: 'Luckiest Guy', cursive;
   font-size: 400%;
   color: antiquewhite;
@@ -131,9 +131,9 @@ html, body
 #master_input
 {
   border-radius: 15px;
-  padding-left: 4px;
+  padding-left: 6px;
   font-family: 'Luckiest Guy', cursive;
-  width: auto;
+  width: 200px;
   height: 30px;
 }
 
