--- a/template/style/style.css
+++ b/template/style/style.css
@@ -168,3 +168,24 @@ html, body
   padding: 5px;
   background-color: #E7AB5B;
 }
+
+/* ------------------------- JOIN ------------------------------*/
+
+#game_link
+{
+  top: 65%;
+  font-family: 'Luckiest Guy', cursive;
+  font-size: 300%;
+  color: antiquewhite;
+  height: auto;
+  transition: all 0.7s;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  text-align: center;
+}
+
+#join 
+{
+  transform: translate(-50%, 100%);
+}
