--- a/view/style/style.css
+++ b/view/style/style.css
@@ -226,7 +226,34 @@ html, body
   to {top: 0px;}
 }
 
+#join_input
+{
+  border-radius: 15px;
+  padding-left: 6px;
+  font-family: 'Luckiest Guy', cursive;
+  width: 200px;
+  height: 30px;
+  position: absolute;
+  transform: translate(-50%, -150%);
+  left: 50%;
+  text-align: center;
+}
+
+#join_bottom
+{
+  font-family: 'Luckiest Guy', cursive;
+  font-size: 400%;
+  color: antiquewhite;
+  height: auto;
+  transition: all 0.7s;
+  position: absolute;
+  transform: translate(-50%,0);
+  left: 50%;
+  text-align: center;
+}
+
 #error {
+  z-index: 20;
   position: absolute;
   left: 50%;
   width: 30%;
