--- a/view/style/style.css
+++ b/view/style/style.css
@@ -127,7 +127,7 @@ html, body
 }
 #pseudo
 {
-  top: 20%;
+  top: 25%;
   font-family: 'Luckiest Guy', cursive;
   font-size: 400%;
   color: antiquewhite;
@@ -166,6 +166,24 @@ html, body
 
 /* ------------------------- CREATE ------------------------------*/
 
+#sex_select
+{
+  font-size: 140%;
+  border-radius: 15px;;
+  position: absolute;
+  top : 40%;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  text-align: center;
+  background-color: #E7AB5B;
+  font-family: 'Luckiest Guy', cursive;
+}
+
+#sex_select:hover
+{
+  cursor: pointer;
+}
+
 .ok
 {
   color: antiquewhite;
@@ -192,16 +210,23 @@ html, body
 #link
 {
   text-align: center;
-  font-size: 200%;
   background-color: #E7AB5B;
   border-radius: 10px;
-  margin-left: 30%;
-  margin-right: 30%;
-  transform: translate(0, 400%);
 }
 
 /* ------------------------- JOIN ------------------------------*/
 
+#play_bot
+{
+  transform: initial;
+  transform: translate(-50%, -50%);
+}
+
+#player_list
+{
+  background-color: red;
+  margin-top: 10%;
+}
 #game_link
 {
   top: 60%;
